# nimble-photos

./: .cursorrules  .dockerignore  .env  .env.dev  .env.example  .gitmodules  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  build_log.txt  log.txt  log2.txt  readme.md  rustfmt.toml  web.config.json
backend/.cargo/: config.toml
backend/db/: reset.sql  timeline.sql
backend/migrations/: 20260219_photo_tags.up.sql
backend/src/: lib.rs  main.rs  middleware.rs  prelude.rs  web.config.json
backend/src/controllers/: admin_user_controller.rs  album_controller.rs  assets_controller.rs  auth_controller.rs  client_controller.rs  dashboard_controller.rs  httpcontext_extensions.rs  mod.rs  photo_controller.rs  storage_controller.rs  tag_controller.rs  timeline_controller.rs
backend/src/domain/: image_categorizer.rs  mod.rs
backend/src/dtos/: admin_user_dto.rs  album_comment_dto.rs  auth_dtos.rs  client_dto.rs  dashboard_settings_dto.rs  mod.rs  photo_comment_dto.rs  photo_dtos.rs  sync_dto.rs  timeline_dtos.rs  upload_dto.rs  user_profile_dto.rs
backend/src/entities/: album.rs  album_comment.rs  album_hooks.rs  album_photo.rs  client.rs  client_storage.rs  exif.rs  mod.rs  permission.rs  photo.rs  photo_browse.rs  photo_comment.rs  photo_cursor.rs  photo_tag.rs  setting.rs  storage_location.rs  tag.rs  timeline.rs  user.rs  user_settings.rs  uuid_id.rs
backend/src/middlewares/: mod.rs  public_middleware.rs  static_file_middleware.rs
backend/src/models/: browse_dimension_sql_adapter.rs  category_template.rs  event_names.rs  exif_tool.rs  mod.rs  property_map.rs  setting_consts.rs  string_id.rs  template.rs
backend/src/repositories/: album_extensions.rs  mod.rs  photo.rs  photo_repo.rs  postgres_extensions.rs  storage_repo.rs  tag_extensions.rs  timeline_repo.rs  validation.rs
backend/src/services/: admin_user_service.rs  auth_service.rs  background_task_runner.rs  browse_service.rs  encrypt_service.rs  event_bus_service.rs  exif_service.rs  file_service.rs  hash_service.rs  id_generation_service.rs  image_categorizer.rs  image_pipeline.rs  image_process_constants.rs  image_process_context.rs  image_process_service.rs  image_process_step.rs  image_process_steps.rs  mod.rs  photo_service.rs  photo_upload_service.rs  preview_extractor.rs  setting_service.rs  storage_service.rs  sync_service.rs  task_descriptor.rs  thumbnail_extractor.rs
backend/testbot/: .gitignore  Cargo.toml
backend/testbot/src/: album.rs  auth.rs  main.rs  photo.rs
backend/tests/: admin_user_controller_tests.rs  auth_controller_tests.rs  auth_service_tests.rs  background_task_runner_tests.rs  browse_service_tests.rs  client_storage_tests.rs  client_tests.rs  dashboard_controller_tests.rs  encrypt_service_tests.rs  exif_service_tests.rs  hash_service_tests.rs  image_categorizer_tests.rs  image_pipeline_path_tests.rs  image_process_pipeline_tests.rs  image_process_service_tests.rs  image_storage_location_tests.rs  migration_schema_tests.rs  photo_upload_service_tests.rs  photo_visibility_view_tests.rs  preview_extractor_tests.rs  repository_get_by_tests.rs  storage_sync_controller_tests.rs  template_tests.rs  thumbnail_extractor_tests.rs  user_tests.rs  usersetting_tests.rs
(+176 files in other folders)
