[package]
name = "nimble-photos"
version = "0.1.0"
edition = "2024"

[dependencies]
nimble-web = { path = "./crates/nimble-web", features = ["postgres"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
], optional = true }


[features]
default = ["postgres"]
postgres = ["nimble-web/postgres", "dep:sqlx"]
