[package]
name = "nimble-photos"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/nimble-web", "crates/rawthumb"]
resolver = "2"

[dependencies]
nimble-web = { path = "./crates/nimble-web", features = ["postgres"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11.9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
], optional = true }

chacha20poly1305 = "0.10"
rand = "0.10"
base64 = "0.22"
anyhow = "1.0.101"
uuid = { version = "1.21", features = ["v4", "serde"] }
sysinfo = { version = "0.38.2", default-features = false, features = [
    "system",
    "disk",
] }
kamadak-exif = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rawthumb = { path = "./crates/rawthumb" }
image = { version = "0.25", default-features = true, features = [
    "jpeg",
    "png",
    "webp",
    "tiff",
    "bmp",
] }
multer = "3.1"
bytes = "1.11.1"
futures-util = "0.3.32"
urlencoding = "2.1.3"

[features]
default = ["postgres"]
postgres = ["nimble-web/postgres", "dep:sqlx"]
testbot = []
